--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	},
 	"dependencies": {
 		"firebase": "^11.8.1",
+		"firebase-admin": "^13.4.0",
 		"flowbite": "^3.1.2",
 		"flowbite-svelte": "^1.4.3"
 	}
