--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"firebase": "^11.8.1",
 		"firebase-admin": "^13.4.0",
 		"flowbite": "^3.1.2",
-		"flowbite-svelte": "^1.4.3"
+		"flowbite-svelte": "^1.4.3",
+		"is-reachable": "^5.2.1"
 	}
 }
