--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-cloudinary": "^2.3.0",
 		"tailwindcss": "^4.1.7",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
+		"cloudinary": "^2.6.1",
 		"firebase": "^11.8.1",
 		"firebase-admin": "^13.4.0",
 		"flowbite": "^3.1.2",
